--- a/kibana.yaml
+++ b/kibana.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: kibana
-  namespace: morgan-elk
+  namespace: efk
   labels:
     app: kibana
 spec:
@@ -24,7 +24,7 @@ spec:
         - name: "ELASTICSEARCH_PASSWORD"
           valueFrom:
             secretKeyRef:
-              name: morgan-elk-password
+              name: efk-password
               key: elastic-password
         ports:
         - containerPort: 5601
@@ -46,7 +46,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kibana
-  namespace: morgan-elk
+  namespace: efk
   labels:
     app: kibana
 spec:  
