--- a/es-ingest.yaml
+++ b/es-ingest.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  namespace: morgan-elk
+  namespace: efk
   name: elasticsearch-ingest
   labels:
     app: elasticsearch
@@ -58,7 +58,7 @@ spec:
             fieldRef:
               fieldPath: metadata.name
         - name: "cluster.name"
-          value: "morgan-elk"
+          value: "efk"
         - name: node.master
           value: "false"
         - name: node.ingest
@@ -68,7 +68,7 @@ spec:
         - name: search.remote.connect
           value: "false"		  
         - name: discovery.zen.ping.unicast.hosts
-          value: "es-master-transport.morgan-elk.svc.cluster.local"	  
+          value: "es-master-transport.efk.svc.cluster.local"	  
         - name: "ES_JAVA_OPTS"
           value: "-Xms3G -Xmx3G"
         ports:
