--- a/nginx.yml
+++ b/nginx.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: morgan-elk
+  namespace: efk
 spec:
   selector:
     matchLabels:
